# feedoptima

./: README.md  feedoptima-demo.html  feedoptima.db  start_backend.bat  start_frontend.bat
backend/: .env.example  .gitignore  pyproject.toml  requirements.txt
backend/app/: ai.py  calculator.py  config.py  crud.py  db.py  db_models.py  main.py  models.py  schemas.py  scrapers.py
backend/app/data/: feed_data.py  standard_data.py
frontend/: README.md  index.html  script.js  styles.css
