[project]
name = "feedoptima-backend"
version = "0.1.0"
description = "FeedOptima backend for livestock ration optimization."
requires-python = ">=3.11"

[project.dependencies]
fastapi = "0.111.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}
pydantic = "2.9.0"
requests = "2.31.0"
beautifulsoup4 = "4.13.0"
python-dotenv = "1.0.0"
pydantic-settings = "2.13.1"
SQLAlchemy = "2.0.32"
"psycopg[binary]" = "3.3.3"

[project.urls]
home = "https://example.com/feedoptima"
